<!--
  ~ Copyright (c) 2012-2020 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<resources>
    <string name="app_name">ekoVPN</string>
    <string name="wait_while_we_set_up">Please wait while we set-up</string>
    <string name="an_error_occured">An error occured during set up</string>
    <string name="title_activity_vpn">VpnActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_fragment_label">Login</string>
    <string name="success_fragment_label">Success</string>
    <string name="splash_fragment_label">Splash</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_connection_type">Select Connection Type</string>
    <string name="TCP">TCP (OpenVPN)</string>
    <string name="UDP">UDP (OpenVPN)</string>
    <string name="IkeV2">IkeV2</string>
    <string name="wireguard">Wireguard</string>
    <string name="rate_our_app">Rate our App</string>
    <string name="lets_go_social">Let\'s Go Social</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="instagram">Instagram</string>
    <string name="contact_support">Contact\nSupport</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy\nPolicy</string>
    <string name="app_version">App version %1$s</string>
    <string name="connecting_status_">Connecting</string>
    <string name="connected_status_">Connected</string>
    <string name="disconnected_status_">Disconnected</string>
    <string name="selected_location">Selected Location:</string>
    <string name="current_location">Current Location:</string>
    <string name="usa_new_york">USA - New York</string>
    <string name="select_location">Select Location</string>
    <string name="select_a_location">Select Server Location</string>
    <string name="time_left">Time left</string>
    <string name="get_more_time">Get More Time</string>
    <string name="retry">RETRY</string>
    <string name="test_vpn_connection">Test VPN</string>
    <string name="out_of_time">You\'ve run out of time</string>
    <string name="out_of_time_desc">View more ads to get more time or subscribe to our premium service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ads_fragment_label">Get More time</string>
    <string name="buy_premimum">Buy Premium</string>
    <string name="quantity_hours">Get %1$d hours</string>
    <string name="quantity_minutes">Get %1$d minutes</string>

    <string name="tcp_open_vpn_title_explanantion"> <![CDATA[<b>TCP (OpenVPN)</b> works on most networks but might be slow ]]></string>
    <string name="udp_open_vpn_title_explanantion"> <![CDATA[<b>UDP (OpenVPN)</b> is fast and more secure but may not work on most networks.]]></string>
    <string name="ikev2_title_explanantion"> <![CDATA[<b>IKEv2</b> is faster but may not work on most networks. (not yet available on android 11)]]></string>
    <string name="wireguard_title_explanantion"> <![CDATA[<b>Wireguard</b> is the fastest but may not work on most networks.]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disconnect_to_get_more_time">We\'d have to disconnect you to get more time, do you want to proceed?</string>
    <string name="new_protocol_selected">New Protocol selected. Connection will be confirmed on next VPN Connection</string>
    <string name="please_wait">Please wait...</string>
    <string name="profile">Account</string>
    <string name="account_number_subtitle"><![CDATA[<b>%1$s</b>]]></string>
    <string name="account_type_subtitle"><![CDATA[<b>%1$s</b>]]></string>
    <string name="renewal_date_subtitle"><![CDATA[<b>%1$s</b>]]></string>
    <string name="referral_title"><![CDATA[Refer friends for <b>Free 1 hour</b>]]></string>
    <string name="referral_sub_title"><![CDATA[Code: <b>%1$s</b>]]></string>
    <string name="disconnect_notice">In order to connect to the new server, we have to disconnect you, would you like to proceed?</string>
    <string name="welcome_to">Welcome to</string>
    <string name="existing_title"><![CDATA[Existing User?<br/><big><b><font color=\'#000000\'>Enter your Account Number</font></b></big>]]></string>
    <string name="account_number_hint">Account number</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="create_free_account">Create Free Account</string>
    <string name="forgot_account_number">Forgot Account Number</string>
    <string name="success">🎉 Success!</string>
    <string name="keep_acct_number_safe">This is your account number Keep it safe! Tap it to copy.</string>
    <string name="free_to_use">ekoVPN is free for everyone to use, you can watch Ads to get more free VPN Credits or pay a monthly fee for Unlimited Credits.</string>
    <string name="continue_free">Continue Free</string>
    <string name="start_free">Start Free</string>
    <string name="account_number_copied">Your account number has been copied to your clip board, store it somewhere safe</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="paid_user_instructions">Paid User? Enter your Playstore  Order Number (Search your email)</string>
    <string name="confirm">Confirm</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="share_referral">Hey there, use my referral code %1$s to get 1 Free hour on ekoVPN” “LINK TO APP”</string>
    <string name="order_number">Order Number</string>
    <string name="no_email_required">No email required</string>
    <string name="redeem_ref_code">Please enter the referral code of the user that referred you to ekoVPN.</string>
    <string name="referral_code">Referral Code</string>
    <string name="redeem_ref">Redeem Referral Code</string>
    <string name="error_performing_request">An error occurred</string>
    <string name="facebook">Facebook</string>

    <plurals name="plural_videos">
        <item quantity="one">Watch %d video</item>
        <item quantity="other">Watch %d videos</item>
    </plurals>

    <plurals name="plural_ads">
        <item quantity="one">View %d ad</item>
        <item quantity="other">View %d ads</item>
    </plurals>

</resources>