<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2020 Abdul-Mujeeb Aliu for ekoVPN
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.ekovpn.android.view.main.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/SettingsFragment" />

        <action
            android:id="@+id/action_HomeFragment_to_AdsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:destination="@id/AdsFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.ekovpn.android.view.main.settings.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/AdsFragment"
        android:name="com.ekovpn.android.view.main.ads.AdsFragment"
        android:label="@string/ads_fragment_label"
        tools:layout="@layout/fragment_ad" />

</navigation>