<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2012-2020 Abdul-Mujeeb Aliu for ekoVPN
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.ekovpn.android.view.auth.splashscreen.SplashFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_SplashFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.ekovpn.android.view.auth.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_LoginFragment_to_SuccessFragment"
            app:destination="@id/SuccessFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/SuccessFragment"
        android:name="com.ekovpn.android.view.auth.success.SuccessFragment"
        android:label="@string/success_fragment_label"
        tools:layout="@layout/fragment_ad">
        <argument
            android:name="isFreshAccount"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

</navigation>