<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2020 Abdul-Mujeeb Aliu for ekoVPN
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <View
        android:layout_width="48dp"
        android:layout_height="5dp"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_home_indicator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:text="Redeem Referral Code"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/two_spaces"
        android:text="@string/redeem_ref_code"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/referral_code_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/four_spaces"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/two_spaces"
        app:hintTextColor="@color/solid_field_colors"
        app:layout_constraintTop_toBottomOf="@+id/existing_user"
        android:hint="@string/referral_code">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/referral_code_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/account_number_textfield"
        android:layout_marginVertical="@dimen/two_spaces"
        app:layout_constraintEnd_toEndOf="@+id/account_number_textfield"
        android:contentDescription="@string/login"
        android:text="@string/confirm"
        android:backgroundTint="@color/eko_red"
        app:iconGravity="end"
        android:textSize="14sp"
        android:letterSpacing="0"
        app:elevation="0dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="@dimen/two_spaces"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</LinearLayout>