<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2012-2020 Abdul-Mujeeb Aliu for ekoVPN
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/four_spaces"
        android:paddingTop="@dimen/two_spaces"
        android:paddingBottom="@dimen/six_spaces"
        tools:context=".view.auth.login.LoginFragment">


        <TextView
            android:id="@+id/existing_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_spaces"
            android:lineSpacingMultiplier="1.2"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_number_textfield"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_spaces"
            android:hint="@string/account_number_hint"
            app:boxStrokeColor="@color/outline_login_text_colors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/existing_user"
            app:startIconDrawable="@drawable/ic_padlock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/outline_login_text_colors"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginVertical="@dimen/two_spaces"
            android:backgroundTint="@color/eko_red"
            android:contentDescription="@string/login"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:icon="@drawable/arrow_right_white"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/account_number_textfield"
            app:layout_constraintTop_toBottomOf="@+id/account_number_textfield" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_spaces"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/new_user"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/three_spaces"
            android:backgroundTint="@color/eko_red"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/create_free_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_user" />

        <TextView
            android:id="@+id/no_email_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/one_space"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/no_email_required"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up" />




        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight_spaces"
            android:background="?dividerHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up" />

        <TextView
            android:id="@+id/forgot_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/four_spaces"
            android:lineSpacingMultiplier="1.2"

            android:text="@string/forgot_account_number"
            android:textColor="@color/eko_red"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>